problem: made local demo-project -> slots_demo for testing (no single commits for a lot of changes)
1. changes on client-side -> changed Person to Interface for Client
2. added PublisherInterface & SubscriberInterface for easier communication (still some problems)
3. organized project dictionary (assets, interfaces, controller, player, server)
4. lobby is working correct. It's possible to start a game -> still problems with the management of the clients
5. created matching stylesheet for lobby